home/static/css/wedding.css
/* BACKGROUND IMAGE */
body{
	background-color: #ffffff;
}

h1{
    font-family: 'Poppins', sans-serif;
    /* text-shadow: -0.05em 0.05em rgb(158, 168, 218), -0.1em 0.1em rgb(84, 96, 230), -0.15em 0.15em rgb(29, 43, 197), -0.2em 0.2em rgb(7, 16, 118); */
    font-size: 10em;
    font-weight: 900;
    text-align: center;
}
h2{
    text-align: center;
	font-family: 'Poppins', sans-serif;
    /* text-shadow: -0.1em 0.1em rgb(84, 96, 230), -0.2em 0.2em rgb(7, 16, 118); */
    font-size: 2em;
    font-weight: 700;
}
.container{
    background-color: rgb(37,37,37,0.0);
    border-radius: 13px;
    color: rgb(0, 0, 0);
	font-family: 'Poppins', sans-serif;
	font-size: 1.5em;
    font-weight: 900;
    margin-left: 15px;
    margin-right: 25px;
    padding: 2%;
    text-align: center;
    z-index: 1;
    position: relative;
}

/* FORM FORMATTING */
.container form{
    max-width:520px;
    margin:0 auto;
    text-align:right;
    position: relative;
    z-index: 2;
}
.container form label{
    display:block;
    font-weight:900;
    margin-bottom:6px;
    color:inherit
}
.container form input{
    width:50%;
    box-sizing:border-box;
    padding:12px 14px;
    margin-bottom:12px;
    margin-left:auto;
    display:block;
    border:2px solid #000;
    background:#fff;
    color:inherit;
    font-family:inherit;
    font-weight:700;
    border-radius:6px;
    font-size:.75em
}
.container form button[type="submit"]{
    background:#000;
    color:#fff;
    border:2px solid #000;
    padding:10px 18px;
    font-weight:900;
    font-family:inherit;
    border-radius:6px;
    cursor:pointer
}
.container form button[type="submit"]:hover{
    opacity:.9
}
.container form input::placeholder{
    color:#666;
    font-weight:900
}


/* INVITE CONTENT */
.invite-content{
    padding: 2%;
    width: 75%;
    margin: 0 auto;
    font-family: 'Poppins', sans-serif;
    font-size: 1em;
    text-align: center;
}

/* BAUHAUS SHAPES */
.red-rectangle {
    position: absolute;
    top: 5%;
    right: 10%;
    width: 700px;
    height: 200px;
    background-color: #cf0000;
    z-index: -1;
    pointer-events: none;
    will-change: transform;
    transform: translateY(0);
}
.blue-circle {
    position: absolute;
    top: 30%;
    left: 5%;
    width: 450px;
    height: 450px;
    background-color: #0404da;
    border-radius: 50%;
    z-index: -1;
    pointer-events: none;
    will-change: transform;
    transform: translateY(0);
}
.yellow-square {
    position: absolute;
    top: 60%;
    right: 20%;
    width: 370px;
    height: 370px;
    background-color: #ecd801;
    z-index: -1;
    pointer-events: none;
    will-change: transform;
    transform: translateY(0);
}
.yellow-triangle {
    position: absolute;
    top: 20%;
    left: 25%;
    width: 0;
    height: 0;
    border-left: 200px solid transparent;
    border-right: 200px solid transparent;
    border-bottom: 350px solid #ecd801;
    z-index: -1;
    pointer-events: none;
    will-change: transform;
    transform: translateY(0);
}   
.red-circle {
    position: absolute;
    top: 50%;
    right: 15%;
    width: 250px;
    height: 250px;
    background-color: #cf0000;
    border-radius: 50%;
    z-index: -1;
    pointer-events: none;
    will-change: transform;
    transform: translateY(0);
}
.blue-square {
    position: absolute;
    top: 15%;
    right: 20%;
    width: 250px;
    height: 250px;
    background-color: #0404da;
    z-index: -1;
    pointer-events: none;
    will-change: transform;
    transform: translateY(0);
}


/* LOCAL FONTS */
@font-face {
	font-family: 'Source Sans Pro';
	font-style: normal;
	font-weight: 900;
	src: local('Source Sans Pro Black'), local('SourceSansPro-Black'), url('../fonts/sourcesansproblack.woff2') format('woff2');
	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}
@font-face {
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: local('Poppins Black'), local('Poppins-Black'), url('../fonts/poppinsblack.woff2') format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
@font-face {
  font-family: 'Poppins';
  font-style: italic;
  font-weight: 700;
  font-display: swap;
  src: local('Poppins Black Italic'), local('Poppins-BlackItalic'), url('../fonts/poppinsblackitalic.woff2') format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

